# ticker-due-diligence-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: roadmap.md
examples/: positions.csv  rdw-financials.csv  rdw-peers.csv  rdw.json
examples/watchlist/: bad-missing-ticker.json  rdw.json  xyz.json
src/ticker_due_diligence/: __init__.py  cli.py  engine.py
tests/: test_due_diligence.py  test_phase7_portfolio.py
